--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                 <button>SEE PRODUCT</button>
             </div>
             <div class="hero-img">
-                <img src="Images/heroimg.jpg" alt="">
+                <img src="Images/heroimg.png" alt="">
             </div>
         </div>
     </div>
